fix footer logo gap for mobile view

--- a/css/style.css
+++ b/css/style.css
@@ -808,4 +808,8 @@ footer {
     flex-direction: column;
     align-items: center;
   }
+
+  .footer-logo {
+    gap: 1.5rem;
+  }
 }
